kube/common.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:9.5
        name: postgres
        resources: {}
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-volume
            mountPath: /pgdata
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
kind: Service
apiVersion: v1
metadata:
  name: pg-service
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
---
###############
# Yesod backend
###############
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yesod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: yesod
    spec:
      containers:
      - image: us.gcr.io/emp-pl-site/yesod@sha256:aa298da78ee3f14a472ab983af7da3b130a1ac5099aeb38a66b09ac30e71435d
        name: yesod
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: config-volume
            mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: ip-block
---
kind: Service
apiVersion: v1
metadata:
  name: yesod-service
spec:
  type: NodePort
  selector:
    app: yesod
  ports:
    - port: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-lego
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-lego
    spec:
      containers:
      - name: kube-lego
        image: jetstack/kube-lego:0.1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
