kube/dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emp-pl-site
  namespace: dev
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: k8s-fw-dev-emp-pl-site--60b3bd0370a060fd
spec:
  tls:
  - hosts:
    - dev.goodcode.cc
    secretName: emp-pl-site-tls
  rules:
  - host: dev.goodcode.cc
    http:
      paths:
      - path: "/*"
        backend:
          serviceName: yesod-service
          servicePort: 3000
