kube/prod.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emp-pl-site
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: http-lb-prod
spec:
  tls:
  - hosts:
    - goodcode.cc
    secretName: emp-pl-site-tls
  rules:
  - host: goodcode.cc
    http:
      paths:
      - path: "/*"
        backend:
          serviceName: yesod-service
          servicePort: 3000
